--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
 	<title>BezzerWizzer42</title>
+	<link rel="stylesheet" type="text/css" href="src/styles/main.css">
 </head>
 <body>
-	<h1 id="category">a</h1>
-	<script type="text/javascript" src="dist/main.js"></script>
 
-	<button onclick="changeCategory()">Ny Kategori</button>
+
+	<div class="category-card">
+		<div id="category">
+			<h1 id="category-name"></h1>
+		</div>
+		<button onclick="changeCategory()">Ny Kategori</button>
+	</div>
+
+	<script type="text/javascript" src="dist/main.js"></script>
 </body>
 </html>
