--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>BezzerWizzer42</title>
-	<link rel="stylesheet" type="text/css" href="src/styles/main.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/bundle.css">
 </head>
 <body>
 
@@ -14,6 +14,6 @@
 		<button onclick="changeCategory()">Ny Kategori</button>
 	</div>
 
-	<script type="text/javascript" src="dist/main.js"></script>
+	<script type="text/javascript" src="dist/js/bundle.js"></script>
 </body>
 </html>
