--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>BezzerWizzer42</title>
 	<link rel="stylesheet" type="text/css" href="dist/css/bundle.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
+
 </head>
 <body>
 
